<resources>
    <string name="app_name">My Application</string>
    <string name="main_one">首页</string>
    <string name="main_two">众筹</string>
    <string name="main_three">艺人空间</string>
    <string name="main_four">个人中心</string>
    <string name="uri_test_3">http://120.25.246.21/vrMobile/travelVideo/zhejiang_xuanchuanpian.mp4</string>
    <string name="uri_test">http://mp4.vjshi.com/2017-09-19/e1920013741c5c66d408c7cdb3d9eddf.mp4</string>
    <string name="uri_test_1">http://mp4.vjshi.com/2016-12-22/e54d476ad49891bd1adda49280a20692.mp4</string>
    <string name="uri_test_h">http://mp4.vjshi.com/2017-08-16/af83af63d018816474067b51a835f4a2.mp4</string>
    <string name="uri_test_5">http://mp4.vjshi.com/2017-10-19/53bfeb9eb92c1748596eaf2a1e649020.mp4</string>
    <string name="uri_test_6">http://mp4.vjshi.com/2016-10-23/a0511ea830bb0620f94a5340a1879800.mp4</string>
    <string name="uri_test_7">http://mp4.vjshi.com/2016-10-21/84bafe60ef0af95a5292f66b9f692504.mp4</string>
    <string name="uri_test_8">http://mp4.vjshi.com/2017-04-14/933db6540f53dd38974b4446388fb928.mp4</string>
    <string name="uri_test_9">http://mp4.vjshi.com/2015-05-11/1431320221859_786.mp4</string>
    <string name="uri_test_10">http://mp4.vjshi.com/2013-07-25/2013072519392517096.mp4</string>
    <string name="uri_test_11">http://mp4.vjshi.com/2016-12-22/3ccab5a78036fa933c8585f4a1e57a44.mp4</string>
    <string name="uri_test_12">http://mp4.vjshi.com/2016-04-05/add12db77c7c5cd6dfef4c1955b36a80.mp4</string>
    <string name="uri_test_13">http://rmcdn.2mdn.net/MotifFiles/html/1248596/android_1330378998288.mp4</string>
    <string name="uri_test_image">http://i3.letvimg.com/lc08_yunzhuanma/201707/29/20/49/3280a525bef381311b374579f360e80a_v2_MTMxODYyNjMw/thumb/2_960_540.jpg</string>
    <string name="new_message_notification_title_template">New message: %1$s</string>
    <string name="ad_tag_url"><![CDATA[https://pubads.g.doubleclick.net/gampad/ads?sz=640x480&iu=/124319096/external/single_ad_samples&ciu_szs=300x250&impl=s&gdfp_req=1&env=vp&output=vast&unviewed_position_start=1&cust_params=deployment%3Ddevsite%26sample_ct%3Dlinear&correlator=]]></string>
    <string name="title_activity_view_pager">ViewPagerActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hide_danmaku">hide</string>
    <string name="show_danmaku">show</string>
    <string name="pause_danmaku">pause</string>
    <string name="resume_danmaku">resume</string>
    <string name="send_danmaku">发送一条(纯文字)</string>
    <string name="send_danmaku_image_text">发送一条(图文)</string>
    <string name="send_danmakus">定时发送</string>
    <string name="send_show">控制</string>
    <string name="cancel_sending_danmakus">取消定时</string>
    <string name="release">release</string>
    <string name="rotate">旋转屏幕</string>
    <string name="play_video">播放视频</string>
    <string name="down_hint">下载并加密视频</string>
    <string name="exo_play_wifi_hint_no">您当前网络不是wifi，是否继续观看视频</string>
    <string name="exo_play_reminder">提示</string>
    <string name="Detailed_play">默认详细播放</string>
    <string name="The_list_of_play">列表播放</string>
    <string name="Custom_layout">自定义布局 </string>
    <string name="Customize_the_start_button_event">自定义事件</string>
    <string name="_15m">继续播放 (15 m)</string>
    <string name="error_hint">出错了</string>
    <string name="im_btn_hint">广告视频</string>
    <string name="googlesdk">googleSDK广告视频</string>
    <string name="custom_media">自定义媒体数据</string>
    <string name="cache_bideo_btn">离线缓存播放</string>
    <string name="simple_video_btn">简单加密视频</string>
    <string name="Skip_the_advertising">跳过广告</string>
    <string name="default_cache">默认缓存播放</string>
    <string name="custom_cache">自定义下载缓存</string>
    <string name="simple_fragment">Fragment列表</string>
    <string name="simple_barrage">弹幕(测试)</string>
    <string name="simple_barrage2">弹幕2(测试)</string>
    <string name="start_button">开始</string>
    <string name="stop_button">停止</string>
    <string name="pause_button">暂停</string>
    <string name="replay_button">重播</string>
    <string name="mute_label">静音:</string>
    <string name="on_radiobutton">开</string>
    <string name="off_radiobutton">关</string>
    <string name="volume_label">音量</string>
    <string name="brightness_label">亮度</string>
    <string name="scale_model">缩放模式</string>
    <string name="aspect_fit">原比例填充(fit)</string>
    <string name="aspect_fill">裁剪占满全屏(fill)</string>
    <string name="drop_buffer_duration">最大丢帧缓冲区</string>
    <string name="time_unit_label">毫秒</string>
    <string name="goto_play">进入播放</string>
    <string name="input_url">这里输入视频url</string>
    <string name="vod_basic_function">点播播放基本功能</string>
    <string name="live_basic_function">直播播放基本功能</string>
    <string name="multiple_video_list_auto_play">多视频列表自动播放(url方式演示)</string>
    <string name="debug_tools">播放器诊断工具演示</string>
    <string name="url_is_empty">url没有填写</string>
    <string name="player_log">播放器日志：</string>
    <string name="log_start_get_data">准备请求码流</string>
    <string name="log_strart_play">开始请求播放</string>
    <string name="toast_prepare_success">准备成功</string>
    <string name="log_prepare_success">准备成功</string>
    <string name="log_player_create_success">播放创建成功</string>
    <string name="log_open_url_success">url请求成功</string>
    <string name="log_request_stream_success">请求流成功</string>
    <string name="log_start_open_stream">开始传输码流</string>
    <string name="log_first_frame_played">第一帧播放完成</string>
    <string name="toast_fail_msg">失败！！！！原因：</string>
    <string name="log_seek_completed">seek结束</string>
    <string name="log_play_stopped">播放停止</string>
    <string name="video_width">视频宽：</string>
    <string name="video_height">视频高：</string>
    <string name="resume_button">继续</string>
    <string name="log_seek_start">seek开始</string>
    <string name="net_change_to_4g">网络切换为4G</string>
    <string name="net_change_to_wifi">网络切换为WIFI</string>
    <string name="net_disconnect">网络已断开</string>
    <string name="net_change_to_continue">是否继续播放？</string>
    <string name="copyright_title">版权信息</string>
    <string name="copyright_ali">阿里云 copyright©2017, 阿里巴巴集团</string>
    <string name="fd_definition">流畅</string>
    <string name="ld_definition">标清</string>
    <string name="sd_definition">高清</string>
    <string name="hd_definition">超清</string>
    <string name="k2_definition">2k</string>
    <string name="k4_definition">4k</string>
    <string name="od_definition">原画</string>
    <string name="no_download_right">无权限下载</string>
    <string name="encrypted">加密</string>
    <string name="encrypted_no">未加密</string>
    <string name="choose_a_definition_to_download">请选择一个清晰度进行下载</string>
    <string name="info_is_empty">有信息没有填写</string>
    <string name="request_vidsts_fail">通过网络请求vidsts失败</string>
    <string name="request_authinfo_fail">通过网络请求authinfo失败</string>
    <string name="please_fill_atleast_one_info">请至少填写source或者vid的一项信息</string>
    <string name="ok">是</string>
    <string name="log_change_quality">请求切换清晰度至：</string>
    <string name="toast_no_local_storage_permission">无本地存储访问权限</string>
    <string name="log_change_quality_success">切换清晰度成功</string>
    <string name="log_change_quality_fail">切换清晰度失败</string>
    <string name="log_play_completion">播放结束</string>
    <string name="toast_play_compleion">播放结束</string>
    <string name="require_permision_msg">下载视频，边播边存以及播放本地视频，需要以下权限。</string>
    <string name="input_vid_here">这里输入视频vid</string>
    <string name="fix_port">固定竖屏</string>
    <string name="add_download">添加下载</string>
    <string name="download_tip">设置下载目录和密码的代码在Application中 密码更换后会导致之前缓存的视频无法播放</string>
    <string name="local_source_tip">本地地址，例如：/mnt/sdcard/test.pm4  网络地址，例如：http://XXX.xx.com/test.mp4</string>
    <string name="input_local_or_net_source">这里输入本地或网络视频地址</string>
    <string name="play_with_no_skin">无皮肤界面</string>
    <string name="play_with_skin">有皮肤界面</string>
    <string name="vod_player_basic_function">点播播放器基本功能(vid+playAuth方式演示)</string>
    <string name="full_screen_slide_play">全屏滑动切换播放(url方式演示)</string>
    <string name="breakpoints_download">多视频断点下载演示</string>
    <string name="auto_play">自动播放:</string>
    <string name="on">开</string>
    <string name="off">关</string>
    <string name="change_quality_label">切换清晰度：</string>
    <string name="input_authinfo_here">这里输入AuthInfo</string>
    <string name="diagnosis_tip">错误信息诊断，填入source 或者 vid</string>
    <string name="input_net_source_here">这里输入网络视频地址</string>
    <string name="goto_diagnosis">进入诊断</string>
    <string name="remove_button">移除</string>
    <string name="play_button">播放</string>
    <string name="prepare_download_item">准备可下载项</string>
    <string name="add_to_download">添加下载</string>
    <string name="half_times">0.5倍</string>
    <string name="one_times">1.0倍</string>
    <string name="one_and_a_half_times">1.5倍</string>
    <string name="twice_times">2.0倍</string>
    <string name="speed_mode">变速模式</string>
    <string name="play_localsource">setLocalSource方式播放本地或网络视频</string>
    <string name="vidsource">VidSource功能演示</string>
    <string name="alivc_theme_blue">蓝色主题</string>
    <string name="alivc_theme_green">绿色主题</string>
    <string name="alivc_theme_orange">橙色主题</string>
    <string name="alivc_theme_red">红色主题</string>
    <string name="vid_sts">点播播放基本功能(vid+sts方式演示)</string>
    <string name="no">否</string>
    <string name="max_buffer_duration_nagtive">缓冲时长不能为负数</string>
    <string name="basic_player">基础播放器</string>
    <string name="advance_player">高级播放器</string>
    <string name="full_ui_player_demo">UI播放器</string>
    <string name="title_activity_demo_base_player">基础播放器</string>
    <string name="title_activity_demo_advance_player">高级播放器</string>
    <string name="inout_accesskeyid_here">这里输入临时accesskeyId</string>
    <string name="input_accesskeysecret_here">这里输入临时accesskeySecret</string>
    <string name="input_securitytoken_here">这里输入临时securityToken</string>
    <string name="snapshot">截图</string>
    <string name="snapshot_success">截取图片成功</string>
    <string name="snapshot_fail">截取图片失败</string>
    <string name="change_source">切换播放源</string>
    <string name="basic_input_url">输入播放地址</string>
    <string name="continue_to_download">是否继续下载？</string>
    <string name="download_has_compeleted">下载已经完成！</string>
    <string name="download_has_not_compeleted">下载未完成，不能播放！</string>
    <string name="show_log">显示日志</string>
    <string name="rotation">旋转角度</string>
    <string name="roate_0">0°</string>
    <string name="roate_90">90°</string>
    <string name="roate_180">180°</string>
    <string name="roate_270">270°</string>
    <string name="mirror">镜像</string>
    <string name="mirror_none">无镜像</string>
    <string name="mirror_h">水平镜像</string>
    <string name="mirror_v">垂直镜像</string>
    <string name="choose_downloaditem">选择下载项</string>
    <string name="continuous_play_demo">连续播放演示(url方式演示)</string>
    <string name="time_shift">直播时移演示</string>
    <string name="current_live_time">当前直播时间:</string>
    <string name="live_answer">直播答题</string>
    <string name="start_live_answer">开始答题</string>
    <string name="live_answer_right">正确</string>
    <string name="live_answer_wrong">答错</string>
    <string name="live_answer_watch">观战</string>
    <string name="live_answer_enter_fail">进入直播间失败！请重试。</string>
    <string name="live_answer_has_started">亲，答题已经开始，下次早点来哦~</string>
    <string name="live_answer_i_know">知道了</string>
    <string name="live_answer_finished">答题结束啦~</string>
    <string name="live_answer_play_fail">播放失败！</string>
    <string name="live_answer_retry">重试播放。。</string>
    <string name="live_answer_sei_data_wrong">SEI 数据错误</string>
    <string name="live_answer_answer_fail">答题失败！</string>
    <string name="live_answer_answer_timeout">答题超时！</string>
    <string name="live_answer_get_question_fail">获取题目失败！</string>
    <string name="live_answer_getresult_fail">获取汇总失败！</string>
</resources>